# deepfake-detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  main.py  pyproject.toml
api/: main.py
api/routes/: evaluate.py  health.py  jobs.py  predict.py  train.py
infra/: vertex_job.yaml
scripts/: build_and_push.sh  create_smoke_test_job.py  dev_run.sh  download_images.py  regenerate_multiavatar_images.py  retry_failed_downloads.py  setup_gcp.example.sh  setup_gcp.sh  transform_dataset.py  validate_local.py
src/data/: augment.py  dft.py  image_loader.py  loader.py  preprocessor.py  splitter.py  verify_loader.py
src/db/: baseline_results.py  client.py  epochs.py  jobs.py  predictions.py  results.py
src/models/: backbone.py  baseline.py  ensemble.py  head.py  verify_backbone.py  verify_backbone_head.py  verify_ensemble.py
src/schemas/: data.py  db.py  experiment.py  prediction.py
src/scripts/: evaluate_baseline.py  train_baseline.py
src/training/: adversarial.py  callbacks.py  train.py
src/utils/: gcs.py  seed.py  vertex.py
