[project]
name = "deepfake-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"albumentationsx>=2.3,<3.0",
	"fastapi",
	"google-cloud-aiplatform>=1.159.0",
	"google-cloud-firestore",
	"google-cloud-storage>=3.12.0",
	"joblib>=1.5.3",
	"opencv-python-headless>=5.0.0.93",
	"pandas>=2.3.3",
	"python-dotenv",
	"python-json-logger>=4.1.0",
	"python-multipart",
	"pyyaml>=6.0.3",
	"scikit-learn~=1.4",
	"sendgrid>=6.12.5",
	"tensorflow[and-cuda]>=2.21.0",
	"uvicorn",
]
